      directory authorities don't think it's a good guard, treat it as if it
      were unlisted: stop using it as a guard, and throw it off the guards
      list if it stays that way for a long time.
    - Allow directory authorities to be marked separately as authorities for
      the v1 directory protocol, the v2 directory protocol, and as hidden
      service directories.  This should make it easier to migrate trust away
      from one of the two authorities currently running on Moria.
    - Reserve the nickname "Unnamed" for routers that can't pick a hostname;
      any router can call itself Unnamed; directory servers will never
      allocate Unnamed to any particular router; clients won't believe that
      any router is the canonical Unnamed.
    - New controller event to alert the controller when our server descriptor
      has changed.
    - Only include function names in log messages for debugging messages;
      in other cases, the content of the message should be clear on its own,
      and including the function name only seems to confuse users.
    - Fix CIRC controller events so that controllers can learn the identity
      digests of non-Named servers used in circuit paths. (Fixes bug 336.)
    - Avoid choosing Exit nodes for entry or middle hops when the bandwidth
      available in non-Exit nodes is much higher then the bandwidth available
      in Exit nodes. (Fixes bug 200.)

  o Security Fixes, minor:
    - If a client asked for a server by name, and we didn't have a
      descriptor for a named server with that name, we might return an
      old one.
    - Fix NetBSD bug that could allow someone to force uninitialized RAM
      to be sent to a server's DNS resolver. This only affects NetBSD
      and other platforms that do not bounds-check tolower().
    - Reject (most) attempts to use Tor as a one-hop proxy; if many people
      start using Tor as a one-hop proxy, exit nodes become a more attractive